--- a/client/src/components/Room.css
+++ b/client/src/components/Room.css
@@ -5,4 +5,14 @@
     width:80%;
     min-height:500px;
     margin: 0.8rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Room-title {
+    color: white;
+    font-size: 2.8rem;
+    font-weight: 800;
+    text-align: center;
 }
